--- a/sts/config/ogre.cfg.example
+++ b/sts/config/ogre.cfg.example
@@ -4,8 +4,8 @@ Render System=OpenGL Rendering Subsystem
 Display Frequency=60 Hz
 FSAA=0
 Fixed Pipeline Enabled=Yes
-Full Screen=Yes
+Full Screen=No
 RTT Preferred Mode=FBO
 VSync=No
-Video Mode=1920 x 1080
+Video Mode=800 x 600
 sRGB Gamma Conversion=No
