Some CMake fixes & improvements.

--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -22,53 +22,52 @@ include_directories(
 	${Boost_INCLUDE_DIRS}
 )
 
-add_executable(sts ${sts_HEADERS} ${sts_SOURCES})
+# Do we need to built a binary?
+set (sts_BUILD_EXECUTABLE ON)
+if (CMAKE_BUILD_TYPE MATCHES "Debug" AND NOT INSTALL_DEBUG_EXECUTABLES)
+	set (sts_BUILD_EXECUTABLE OFF)
+endif ()
 
-if (WIN32)
-#	ToDo: solve linking problem here
-#	set_target_properties (sts PROPERTIES WIN32_EXECUTABLE TRUE)
-endif (WIN32)
+if (sts_BUILD_EXECUTABLE)
+	add_executable(sts ${sts_HEADERS} ${sts_SOURCES})
 
-target_link_libraries(sts ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${OGRE_Overlay_LIBRARIES})
-# link boost filesystem
-target_link_libraries(sts ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+	target_link_libraries(sts ${Boost_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${OGRE_Overlay_LIBRARIES})
 
-# ToDo: add post build commands for MSVC_IDE
+	if (WIN32)
+	#	ToDo: solve linking problem here
+	#	set_target_properties (sts PROPERTIES WIN32_EXECUTABLE TRUE)
+	endif (WIN32)
 
-# Folder with binaries. Currently on Windows we install just to INSTALL_PREFIX, on Linux to bin subfoler.
-set (sts_BIN_DIR ${CMAKE_INSTALL_PREFIX})
-if (UNIX)
-	set (sts_BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin)
-endif (UNIX)
+	# ToDo: add post build commands for MSVC_IDE
 
-# do we need to built a binary?
-set (sts_IS_BINARY_BUILT False)
-if ((CMAKE_BUILD_TYPE MATCHES "Release") OR (CMAKE_BUILD_TYPE MATCHES "Debug" AND INSTALL_DEBUG_BINARIES))
-	set (sts_IS_BINARY_BUILT TRUE)
-endif ((CMAKE_BUILD_TYPE MATCHES "Release") OR (CMAKE_BUILD_TYPE MATCHES "Debug" AND INSTALL_DEBUG_BINARIES))
+	# Folder with binaries. Currently on Windows we install just to INSTALL_PREFIX, on Linux to bin subfoler.
+	if (WIN32)
+		set (sts_BIN_DIR ${CMAKE_INSTALL_PREFIX})
+	else (WIN32)
+		# Same for unix and apple systems for now
+		set (sts_BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin)
+	endif (WIN32)
 
-# install the binary
-if (sts_IS_BINARY_BUILT)
-	# install the binary itself
-    install (TARGETS sts DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Release)
-	install (TARGETS sts DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Debug)
+	# Install the executable itself
+    install (TARGETS sts DESTINATION ${sts_BIN_DIR})
 
-	# install ogre.cfg, necessary if binary is built
+	# Install ogre.cfg, necessary if binary is built
 	if (NOT EXISTS ${PROJECT_SOURCE_DIR}/config/ogre.cfg)
-		message(SEND_ERROR "Failed to find config/ogre.cfg file")
-	endif (NOT EXISTS ${PROJECT_SOURCE_DIR}/config/ogre.cfg)
-	install (FILES config/ogre.cfg DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Release)
-	install (FILES config/ogre.cfg DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Debug)
+		message(SEND_ERROR "Failed to find config/ogre.cfg file. Please create one.")
+	endif ()
+	install (FILES config/ogre.cfg DESTINATION ${sts_BIN_DIR})
 
-	# install plugins.cfg, optional
+	# Install plugins.cfg, optional (release)
 	if (EXISTS ${PROJECT_SOURCE_DIR}/config/plugins.cfg)
 		install (FILES config/plugins.cfg DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Release)
-		install (FILES config/plugins.cfg DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Debug)
-	endif (EXISTS ${PROJECT_SOURCE_DIR}/config/plugins.cfg)
+	endif ()
 
-	# install data such as models
-	install (DIRECTORY data/ DESTINATION data)
+	# Install plugins.cfg, optional (debug)
+	if (EXISTS ${PROJECT_SOURCE_DIR}/config/debug/plugins.cfg)
+		install (FILES config/debug/plugins.cfg DESTINATION ${sts_BIN_DIR} CONFIGURATIONS Debug)
+	endif ()
 
+	# Install plugins for Windows
 	if (WIN32)
 		install (FILES ${OGRE_PLUGIN_DIR_REL}/OgreMain.dll
 				${OGRE_PLUGIN_DIR_REL}/Plugin_CgProgramManager.dll
@@ -90,5 +89,7 @@ if (sts_IS_BINARY_BUILT)
 				DESTINATION ${CMAKE_INSTALL_PREFIX} CONFIGURATIONS Debug
 				)
 	endif (WIN32)
-endif (sts_IS_BINARY_BUILT)
+endif ()
 
+# Install all the game data
+install (DIRECTORY data/ DESTINATION data)
