Folders separating perfomed

--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -13,8 +13,8 @@ set (sts_HEADERS
 	"${sts_SRC_ROOT_DIR}/weapon.hpp"
 	"${sts_SRC_ROOT_DIR}/bullet.hpp"
 	"${sts_SRC_ROOT_DIR}/move.cpp"
-	"${sts_SRC_ROOT_DIR}/SoundManager.hpp"
-	"${sts_SRC_ROOT_DIR}/MyFrameListener.hpp"
+	"${sts_SRC_ROOT_DIR}/sound/SoundManager.hpp"
+	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_attachable.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d.hpp"
@@ -37,8 +37,8 @@ set (sts_SOURCES
 	"${sts_SRC_ROOT_DIR}/bullet.cpp"
 	"${sts_SRC_ROOT_DIR}/weapon.cpp"
 	"${sts_SRC_ROOT_DIR}/move.cpp"
-	"${sts_SRC_ROOT_DIR}/SoundManager.cpp"
-	"${sts_SRC_ROOT_DIR}/MyFrameListener.cpp"
+	"${sts_SRC_ROOT_DIR}/sound/SoundManager.cpp"
+	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d.cpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_layer.cpp"
