--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -19,6 +19,8 @@ set (sts_HEADERS
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d_attachable.hpp"
+	"${sts_SRC_ROOT_DIR}/rendering/sts_sprite2d.hpp"
+	"${sts_SRC_ROOT_DIR}/rendering/sts_sprite2d_attachable.hpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_layer.hpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_layered_object.hpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_object_group.hpp"
@@ -42,6 +44,7 @@ set (sts_SOURCES
 	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d.cpp"
+	"${sts_SRC_ROOT_DIR}/rendering/sts_sprite2d.cpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_layer.cpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_layered_object.cpp"
 	"${sts_SRC_ROOT_DIR}/scene/sts_scene_manager.cpp"
