--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -11,7 +11,7 @@ set (sts_HEADERS
 	"${sts_SRC_ROOT_DIR}/game_data.hpp"
 	"${sts_SRC_ROOT_DIR}/game_object.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit.hpp"
-	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_style.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_type.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/motion/sts_motion_behavior.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_transition.hpp"
@@ -44,7 +44,7 @@ set (sts_SOURCES
 	"${sts_SRC_ROOT_DIR}/game_data.cpp"
 	"${sts_SRC_ROOT_DIR}/game_object.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit.cpp"
-	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_style.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_type.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/motion/sts_motion_behavior.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_aiming_behavior.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet.cpp"
