Added state sequence & permanent state proto. Imporoved states API.

--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -13,8 +13,10 @@ set (sts_HEADERS
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_type.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/motion/sts_motion_behavior.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_permanent_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_transition.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_unit_state_sequence.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_aiming_behavior.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet_style.hpp"
@@ -46,6 +48,9 @@ set (sts_SOURCES
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_type.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/motion/sts_motion_behavior.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_permanent_state.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_state.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_unit_state_sequence.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_aiming_behavior.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet_style.cpp"
