--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -22,6 +22,7 @@ set (sts_HEADERS
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet_style.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_style.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon_state.hpp"
 	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_attachable.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.hpp"
@@ -54,7 +55,9 @@ set (sts_SOURCES
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_aiming_behavior.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet_style.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_style.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon_state.cpp"
 	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d.cpp"
