Improved firing and motion behavior APIs. Renamed AimingBehavior into FiringBehavior. Added OIS key wrapper & corresponding behaviors.

--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -13,16 +13,19 @@ set (sts_HEADERS
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/sts_unit_type.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/motion/sts_motion_behavior.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/motion/sts_motion_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_permanent_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_transition.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_unit_state_sequence.hpp"
-	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_aiming_behavior.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_behavior.hpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_state.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet_style.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_style.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon.hpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon_state.hpp"
+	"${sts_SRC_ROOT_DIR}/input/sts_key.hpp"
 	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_attachable.hpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.hpp"
@@ -52,12 +55,13 @@ set (sts_SOURCES
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_permanent_state.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_state.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/statemachine/sts_unit_state_sequence.cpp"
-	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_aiming_behavior.cpp"
+	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_behavior.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_bullet_style.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_firing_style.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon.cpp"
 	"${sts_SRC_ROOT_DIR}/gameplay/weaponry/sts_weapon_state.cpp"
+	"${sts_SRC_ROOT_DIR}/input/sts_key.cpp"
 	"${sts_SRC_ROOT_DIR}/ois/MyFrameListener.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_renderable.cpp"
 	"${sts_SRC_ROOT_DIR}/rendering/sts_model3d.cpp"
